--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- navbar -->
     <div class="nav-container">
         <nav class="navbar">
-            <h2 class="navbar-logo">Artec Shop</h2>
+            <h2 class="navbar-logo">Artec</h2>
             <h2 class="ver-carrito" id="verCarrito">🛒</h2>
         </nav>
     </div>
@@ -59,6 +59,9 @@
     </button>
   </div>
 
+<!-- seccion de shop -->
+
+<div id="seccionShop" class="seccion-shop"></div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script src="./js/main.js"></script>
