--- a/index.html
+++ b/index.html
@@ -63,7 +63,12 @@
 
 <div id="seccionShop" class="seccion-shop"></div>
 
+<!-- contenido del modal -->
+
+<div id="modalContainer" class="modal-container"></div>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script src="./js/products.js"></script>
 <script src="./js/main.js"></script>
 </body>
 </html>
