--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="nav-container">
         <nav class="navbar">
             <h2 class="navbar-logo">Artec</h2>
-            <h2 class="ver-carrito" id="verCarrito">🛒</h2>
+            <h2 class="fa-solid fa-cart-shopping ver-carrito" id="verCarrito"></h2>
         </nav>
     </div>
 <!-- banner -->
@@ -70,5 +70,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script src="./js/products.js"></script>
 <script src="./js/main.js"></script>
+<script src="./js/carrito.js"></script>
 </body>
 </html>
