contador de carrito, cantidad y estilos

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="nav-container">
         <nav class="navbar">
             <h2 class="navbar-logo">Artec</h2>
-            <h2 class="fa-solid fa-cart-shopping ver-carrito" id="verCarrito"></h2>
+            <h2 class="fa-solid fa-cart-shopping ver-carrito" id="verCarrito"> <span id="cantidadCarrito" class="cantidad-carrito"></span></h2>
         </nav>
     </div>
 <!-- banner -->
