--- a/index.html
+++ b/index.html
@@ -1,27 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/ced6c10539.js" crossorigin="anonymous"></script>
-    <title>Artec Shop</title>
-</head>
-<body>
-    <!-- navbar -->
-    <div class="nav-container">
-        <nav class="navbar">
-            <h2 class="navbar-logo">Artec</h2>
-            <h2 class="fa-solid fa-cart-shopping ver-carrito" id="verCarrito"> <span id="cantidadCarrito" class="cantidad-carrito"></span></h2>
-        </nav>
-    </div>
-<!-- banner -->
 
-<div id="hero-carousel" class="carousel slide" data-bs-ride="carousel">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://kit.fontawesome.com/ced6c10539.js" crossorigin="anonymous"></script>
+  <title>Artec Shop</title>
+</head>
+
+<body>
+  <!-- navbar -->
+  <div class="nav-container">
+    <nav class="navbar">
+      <h2 class="navbar-logo">Artec</h2>
+      <h2 class="fa-solid fa-cart-shopping ver-carrito" id="verCarrito"> <span id="cantidadCarrito"
+          class="cantidad-carrito"></span></h2>
+    </nav>
+  </div>
+  <!-- banner -->
+
+  <div id="hero-carousel" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
-      <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="0" class="active" aria-current="true"
+        aria-label="Slide 1"></button>
       <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
       <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
     </div>
@@ -59,17 +64,20 @@
     </button>
   </div>
 
-<!-- seccion de shop -->
+  <!-- seccion de shop -->
 
-<div id="seccionShop" class="seccion-shop"></div>
+  <div id="seccionShop" class="seccion-shop"></div>
 
-<!-- contenido del modal -->
+  <!-- contenido del modal -->
 
-<div id="modalContainer" class="modal-container"></div>
+  <div id="modalContainer" class="modal-container"></div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-<script src="./js/products.js"></script>
-<script src="./js/main.js"></script>
-<script src="./js/carrito.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+  </script>
+  <script src="./js/products.js"></script>
+  <script src="./js/main.js"></script>
+  <script src="./js/carrito.js"></script>
 </body>
+
 </html>
