--- a/index.html
+++ b/index.html
@@ -86,17 +86,17 @@
   <!-- marcas -->
   <div class="container p-2">
     <div class = "row ">
-      <div class="col-12 col-md-6 col-lg-4">
+      <div class="col-md-11 col-md-6 col-lg-4">
         <div class="card">
           <img src="./images/card1.png" alt="" class="card-img-top">
         </div>
       </div>
-      <div class="col-12 col-md-6 col-lg-4">
+      <div class="col-md-11 col-md-6 col-lg-4">
         <div class="card">
           <img src="./images/card2.jpg" alt="" class="card-img-top">
         </div>
       </div>
-      <div class="col-12 col-md-6 col-lg-4">
+      <div class="col-md-11 col-md-6 col-lg-4">
         <div class="card">
           <img src="./images/card3.jpg" alt="" class="card-img-top">
         </div>
